fixing links, adding spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,8 @@
 /*
-  - images
-  - links
   - slide in
   - add gifs?
   - footer
-  - navigating links on left collumn
-
+  
   - post about pictures
   - post about learning curves
 */
@@ -52,6 +49,13 @@ body {
   color: white;
   margin-top: 7vh; }
 
+.left-collumn-link a {
+  color: white;
+  text-decoration: none; }
+
+.left-collumn-link a:hover {
+  color: #81a9dd; }
+
 .left-collumn-divider {
   border-bottom: solid;
   border-color: white;
@@ -74,6 +78,7 @@ body {
 .projects-card {
   float: right;
   margin-right: 3rem;
+  margin-bottom: 4rem;
   width: 30rem;
   padding: 2rem;
   color: white;
